New report daily order revenue trend is created.