@@ -1,7 +1,5 @@
 package com.sivalabs.springapp.web.controllers;
 
-import com.sivalabs.springapp.DateUtils;
-import com.sivalabs.springapp.reports.pojo.DailyOrderGround;
 import com.sivalabs.springapp.reports.pojo.DailyOrderReport;
 import com.sivalabs.springapp.reports.service.ReportsGenerator;
 import com.sivalabs.springapp.services.BillService;
@@ -10,11 +8,12 @@ import com.sivalabs.springapp.services.UserService;
 import org.jfree.chart.ChartFactory;
 import org.jfree.chart.ChartUtilities;
 import org.jfree.chart.JFreeChart;
+import org.jfree.chart.labels.StandardCategoryItemLabelGenerator;
+import org.jfree.chart.plot.CategoryPlot;
 import org.jfree.chart.plot.PlotOrientation;
 import org.jfree.chart.renderer.category.CategoryItemRenderer;
 import org.jfree.data.category.CategoryDataset;
 import org.jfree.data.category.DefaultCategoryDataset;
-import org.jfree.data.general.DatasetGroup;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -28,11 +27,13 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.sql.SQLException;
+import java.text.DateFormat;
+import java.text.NumberFormat;
 import java.text.SimpleDateFormat;
 import java.time.LocalDate;
 import java.time.format.TextStyle;
-import java.time.temporal.TemporalField;
 import java.util.*;
+import java.util.List;
 
 /**
  * User: duggirag
@@ -58,7 +59,7 @@ public class ChartsResource {
         List<DailyOrderReport> dailyOrderReportList = reportsGenerator.generateDailyOrderReport(new Date());
         Map<String, Object> userMap = new HashMap<>();
         int height = 500;
-        int width = new Integer(request.getParameter("width"));
+        int width = Double.valueOf(request.getParameter("width")).intValue();
         JFreeChart barChart = ChartFactory.createBarChart3D(
                 "Daily order for " + formattedDate,
                 "Sector",
@@ -75,20 +76,51 @@ public class ChartsResource {
         out.close();
     }
 
-    @RequestMapping(value = "/dailyOrderRevenueTrend", method = RequestMethod.GET, produces = MediaType.IMAGE_JPEG_VALUE)
-    public void generateRevenueTrendForTheMonth(HttpServletRequest request, HttpServletResponse response) throws SQLException, IOException {
-        List<DailyOrderReport> dailyOrderReportList = reportsGenerator.generateRevenueTrend();
-        Map<String, Object> userMap = new HashMap<>();
+    @RequestMapping(value = "/dailyRevenueTrend", method = RequestMethod.GET, produces = MediaType.IMAGE_JPEG_VALUE)
+    public void generateRevenueTrendForTheDay(HttpServletRequest request, HttpServletResponse response) throws SQLException, IOException {
+        LocalDate localDate = LocalDate.now();
+        List<DailyOrderReport> dailyOrderReportList = reportsGenerator.generateDailyRevenueTrend(localDate.getMonth());
         int height = 500;
-        int width = new Integer(request.getParameter("width"));;
+        int width = Double.valueOf(request.getParameter("width")).intValue();
         JFreeChart barChart = ChartFactory.createBarChart3D(
-                "Revenue Trend ",
-                "Month",
-                "Rs.",
-                createRevenueDataset(dailyOrderReportList),
+                "Daily Revenue Trend ("+localDate.getMonth().getDisplayName(TextStyle.SHORT, Locale.US)+")",
+                "Day",
+                "\u20B9. (x1000)",
+                createDailyRevenueDataset(dailyOrderReportList),
                 PlotOrientation.VERTICAL,
                 true, true, true);
-
+        final CategoryPlot plot = barChart.getCategoryPlot();
+        final CategoryItemRenderer renderer = plot.getRenderer();
+        renderer.setSeriesItemLabelGenerator(0, new StandardCategoryItemLabelGenerator("{2}", NumberFormat.getCurrencyInstance(new Locale("en", "IN"))));
+        renderer.setSeriesItemLabelGenerator(1, new StandardCategoryItemLabelGenerator("{2}", NumberFormat.getCurrencyInstance(new Locale("en", "IN"))));
+        renderer.setSeriesItemLabelsVisible(0, true);
+        renderer.setSeriesItemLabelsVisible(1, true);
+        ByteArrayOutputStream bos = new ByteArrayOutputStream();
+        ChartUtilities.writeChartAsJPEG(bos, barChart, width, height);
+        response.setContentType("image/png");
+        OutputStream out = new BufferedOutputStream(response.getOutputStream());
+        out.write(bos.toByteArray());
+        out.flush();
+        out.close();
+    }
+    @RequestMapping(value = "/monthlyRevenueTrend", method = RequestMethod.GET, produces = MediaType.IMAGE_JPEG_VALUE)
+    public void generateRevenueTrendForTheMonth(HttpServletRequest request, HttpServletResponse response) throws SQLException, IOException {
+        List<DailyOrderReport> dailyOrderReportList = reportsGenerator.generateRevenueTrend();
+        int height = 500;
+        int width = Double.valueOf(request.getParameter("width")).intValue();
+        JFreeChart barChart = ChartFactory.createBarChart3D(
+                "Monthly Revenue Trend ",
+                "Month",
+                "\u20B9.",
+                createMonthlyRevenueDataset(dailyOrderReportList),
+                PlotOrientation.VERTICAL,
+                true, true, true);
+        final CategoryPlot plot = barChart.getCategoryPlot();
+        final CategoryItemRenderer renderer = plot.getRenderer();
+        renderer.setSeriesItemLabelGenerator(0, new StandardCategoryItemLabelGenerator("{2}", NumberFormat.getCurrencyInstance(new Locale("en", "IN"))));
+        renderer.setSeriesItemLabelGenerator(1, new StandardCategoryItemLabelGenerator("{2}", NumberFormat.getCurrencyInstance(new Locale("en", "IN"))));
+        renderer.setSeriesItemLabelsVisible(0, true);
+        renderer.setSeriesItemLabelsVisible(1, true);
         ByteArrayOutputStream bos = new ByteArrayOutputStream();
         ChartUtilities.writeChartAsJPEG(bos, barChart, width, height);
         response.setContentType("image/png");
@@ -108,13 +140,25 @@ public class ChartsResource {
         return categoryDataset;  //To change body of created methods use File | Settings | File Templates.
     }
 
-    private CategoryDataset createRevenueDataset(List<DailyOrderReport> dailyOrderReportList) {
+    private CategoryDataset createMonthlyRevenueDataset(List<DailyOrderReport> dailyOrderReportList) {
         DefaultCategoryDataset categoryDataset = new DefaultCategoryDataset();
         for (DailyOrderReport dailyOrderReport : dailyOrderReportList) {
             categoryDataset.addValue(dailyOrderReport.getBmRevenue(), "BM", dailyOrderReport.getOrderMonth());
             categoryDataset.addValue(dailyOrderReport.getCmRevenue(), "CM", dailyOrderReport.getOrderMonth());
         }
 
+        return categoryDataset;  //To change body of created methods use File | Settings | File Templates.
+    }
+
+    private CategoryDataset createDailyRevenueDataset(List<DailyOrderReport> dailyOrderReportList) {
+        DefaultCategoryDataset categoryDataset = new DefaultCategoryDataset();
+        DateFormat dateFormat = new SimpleDateFormat("dd");
+        for (DailyOrderReport dailyOrderReport : dailyOrderReportList) {
+            //categoryDataset.addValue(dailyOrderReport.getTotalBmOrder(), "BM", dateFormat.format(dailyOrderReport.getOrderDate()));
+            categoryDataset.addValue((dailyOrderReport.getBmRevenue()/1000), "BM", dateFormat.format(dailyOrderReport.getOrderDate()));
+            //categoryDataset.addValue(dailyOrderReport.getTotalCmOrder(), "CM", dateFormat.format(dailyOrderReport.getOrderDate()));
+            categoryDataset.addValue((dailyOrderReport.getCmRevenue()/1000), "CM", dateFormat.format(dailyOrderReport.getOrderDate()));
+        }
         return categoryDataset;  //To change body of created methods use File | Settings | File Templates.
     }
 }
